--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "react-native-rapi-ui": "^0.2.1",
     "react-native-reanimated": "~2.3.1",
     "react-native-screens": "~3.10.1",
+    "react-native-toast-message": "^2.1.2",
     "react-native-web": "0.17.1",
     "react-navigation-stack": "^2.10.4",
     "react-query": "^3.34.16",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
